--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </header>
 <body>
     <section>
+        <hr/>
         <h1>Estudo PI</h1>
         <ul>
             <li>Item 1</li>
@@ -36,9 +37,9 @@
         <figcaption>Fig 1. Grafico horizontal com dependencias</figcaption>
     </figure>
     </article>
-
+   
     <article>
-        <table border="1">
+        <table>
                 <thead>
                     <caption>Browsers mais usados</caption>
                 <tr>
@@ -50,13 +51,13 @@
                     <tr><td colspan="3">Vencedor: Chrome</td></tr>
                 </tfoot>
                 <tbody>
-                <tr><td>Chrome</td><td>50%</td><td>Sim</td></tr>
-                <tr><td>Firefox</td><td>40%</td><td>Sim</td></tr>
-                <tr><td>Edge</td><td>10%</td><td>Sim</td></tr>
+                <tr><td>Chrome</td><td>50%</td><td rowspan="3">Sim</td></tr>
+                <tr><td>Firefox</td><td>40%</td></tr>
+                <tr><td>Edge</td><td>10%</td></tr>
                 </tbody>
                 </table>
     </article>
-
+<hr/>
 </body>
 <footer><address>
     <br/>
