--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Tower Defense</title>
-    <link type="text/css" rel="stylesheet" href="https://raw.githubusercontent.com/TheWebs/jhvjhv/master/styles/style.css">
+    <link type="text/css" rel="stylesheet" href="https://hastebin.com/raw/luyalawuda">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lobster">
     <nav id="menu">
         <ul>
